--- a/SIGNALTRADE/index.html
+++ b/SIGNALTRADE/index.html
@@ -15,7 +15,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 100vh;
+            justify-content: center; /* Центрирование по вертикали */
+            height: 100vh; /* Минимальная высота на весь экран */
             background-color: #121212;
             color: white;
         }
@@ -62,7 +63,8 @@
         }
 
         #result img {
-            width: 200px; /* Размер изображения результата */
+            width: 100%; /* Изображение адаптивное */
+            max-width: 200px; /* Максимальная ширина изображения */
             height: auto; /* Автоматическая высота */
             margin-top: 10px; /* Подгонка отступа */
         }
@@ -112,15 +114,16 @@
         }
 
         #contactBox {
-    background: rgba(255, 255, 255, 0.2); /* Полупрозрачный фон */
-    padding: 10px; /* Отступы внутри */
-    border-radius: 5px; /* Скругление углов */
-    display: flex; /* Используем Flexbox */
-    align-items: center; /* Центрируем по вертикали */
-    justify-content: center; /* Центрируем по горизонтали */
-    margin-top: 2px; /* Отступ сверху для отделения от других элементов */
-    width: 300px; /* Автоматически подстраивается под содержимое */
-}
+            background: rgba(255, 255, 255, 0.2); /* Полупрозрачный фон */
+            padding: 10px; /* Отступы внутри */
+            border-radius: 5px; /* Скругление углов */
+            display: flex; /* Используем Flexbox */
+            align-items: center; /* Центрируем по вертикали */
+            justify-content: center; /* Центрируем по горизонтали */
+            margin-top: 2px; /* Отступ сверху для отделения от других элементов */
+            width: 100%; /* Ширина на всю доступную ширину */
+            max-width: 300px; /* Максимальная ширина */
+        }
 
         #contactBox img {
             margin-right: 5px; /* Отступ от изображения к тексту */
@@ -132,7 +135,7 @@
             color: white; /* Цвет текста */
         }
 
-        @media (max-width: 600px)  {
+        @media (max-width: 600px) {
             body {
                 font-size: 16px; /* Меньший размер шрифта для мобильных */
             }
@@ -145,8 +148,11 @@
                 width: 100%; /* Кнопки и селекты занимают полную ширину */
                 margin: 5px 0; /* Отступы между элементами */
             }
-        }
 
+            #result {
+                font-size: 16px; /* Меньший размер текста для результата */
+            }
+        }
     </style>
 </head>
 <body>
@@ -193,7 +199,7 @@
 
     <div id="contactBox">
         <img src="images/logo.svg" alt="Telegram" width="24" height="24" />
-        <span>       @username</span>
+        <span>@username</span>
     </div>
 
     <script>
@@ -253,3 +259,12 @@
     </script>
 </body>
 </html>
+Изменения и улучшения:
+
+Центрирование элементов: Добавлено justify-content: center; к body, чтобы центрировать элементы по вертикали.
+
+Адаптивные размеры изображений: Установлено width: 100%; и max-width: 200px; для изображений результата, чтобы они были адаптивными и не выходили за пределы контейнера.
+
+Максимальная ширина для элементов: Установлены максимальные ширины для контейнеров, таких как #contactBox, чтобы они не растягивались слишком сильно на широких экранах.
+
+Эти улучшения помогут вашему приложению выглядеть и работать лучше на всех устройствах, включая iOS и Android.
